modificado user dropdown

--- a/home.html
+++ b/home.html
@@ -23,8 +23,8 @@
             </div>
             <ul class="bar-login">
               <li id="usuario">
-                <div id="dropdown-login" class="btn-group">
-                  <button class="btn btn-secondary btn-lg dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
+                <div class="btn-group">
+                  <button class="btn btn-secondary btn-lg dropdown-toggle . shadow-none" type="button" data-bs-toggle="dropdown" aria-expanded="false">
                       <img src="images/baseline_account_circle_black_48dp.png" alt="" width="20%">
                       Taila Santos
                   </button>
@@ -52,7 +52,7 @@
     </div>
     <ul class="list-unstyled ps-0">
       <li class="mb-1">
-        <button class="btn btn-toggle align-items-center rounded collapsed" data-bs-toggle="collapse" data-bs-target="#home-collapse" aria-expanded="false">
+        <button class="btn btn-toggle align-items-center rounded collapsed . shadow-none" data-bs-toggle="collapse" data-bs-target="#home-collapse" aria-expanded="false">
           <span>Usuários</span>
           <img src="./images/outline_manage_accounts_white_48dp.png" alt="" width="12%">
         </button>
@@ -64,7 +64,7 @@
         </div>
       </li>
       <li class="mb-1">
-        <button class="btn btn-toggle align-items-center rounded collapsed" data-bs-toggle="collapse" data-bs-target="#dashboard-collapse" aria-expanded="false">
+        <button class="btn btn-toggle align-items-center rounded collapsed . shadow-none" data-bs-toggle="collapse" data-bs-target="#dashboard-collapse" aria-expanded="false">
           <span>Vendas</span>
           <img class="dashboard-shop" src="./images/baseline_shopping_bag_white_48dp.png" alt="" width="12%">
         </button>
@@ -76,7 +76,7 @@
         </div>
       </li>
       <li class="mb-1">
-        <button class="btn btn-toggle align-items-center rounded collapsed" data-bs-toggle="collapse" data-bs-target="#orders-collapse" aria-expanded="false">
+        <button class="btn btn-toggle align-items-center rounded collapsed . shadow-none" data-bs-toggle="collapse" data-bs-target="#orders-collapse" aria-expanded="false">
           <span>Produtos</span>
           <img src="./images/baseline_inventory_2_white_48dp.png" alt="" width="12%">
         </button>
@@ -89,7 +89,7 @@
         </div>
       </li>
       <li class="mb-1">
-        <button class="btn btn-toggle align-items-center rounded collapsed" data-bs-toggle="collapse" data-bs-target="#account-collapse" aria-expanded="false">
+        <button class="btn btn-toggle align-items-center rounded collapsed . shadow-none" data-bs-toggle="collapse" data-bs-target="#account-collapse" aria-expanded="false">
           <span>Relatórios</span>
           <img src="./images/baseline_leaderboard_white_48dp.png" alt="" width="12%">
         </button>
@@ -103,25 +103,25 @@
       </li>
       <div class="mb">
       <li class="mb-1">
-        <button class="btn btn-toggle align-items-center rounded collapsed" data-bs-toggle="collapse" data-bs-target="collapse" aria-expanded="true">
+        <button class="btn btn-toggle align-items-center rounded collapsed . shadow-none" data-bs-toggle="collapse" data-bs-target="collapse" aria-expanded="true">
           <span>Encomendas</span>
           <img src="./images/baseline_local_shipping_white_48dp.png" alt="" width="12%">
         </button>
       </li>
       <li class="mb-1">
-        <button class="btn btn-toggle align-items-center rounded collapsed" data-bs-toggle="collapse" data-bs-target="collapse" aria-expanded="true">
+        <button class="btn btn-toggle align-items-center rounded collapsed . shadow-none" data-bs-toggle="collapse" data-bs-target="collapse" aria-expanded="true">
           <span>Histórico</span>
           <img src="./images/baseline_history_white_48dp.png" alt="" width="12%">
         </button>
       </li>
       <li class="mb-1">
-        <button class="btn btn-toggle align-items-center rounded collapsed" data-bs-toggle="collapse" data-bs-target="collapse" aria-expanded="true">
+        <button class="btn btn-toggle align-items-center rounded collapsed . shadow-none" data-bs-toggle="collapse" data-bs-target="collapse" aria-expanded="true">
           <span>Configurações</span>
           <img src="./images/baseline_settings_white_48dp.png" alt="" width="12%">
         </button>
       </li>
       <li class="mb-1">
-        <button class="btn btn-toggle align-items-center rounded collapsed" data-bs-toggle="collapse" data-bs-target="collapse" aria-expanded="true">
+        <button class="btn btn-toggle align-items-center rounded collapsed . shadow-none" data-bs-toggle="collapse" data-bs-target="collapse" aria-expanded="true">
           <span>Suporte</span>
           <img src="./images/baseline_help_center_white_48dp.png" alt="" width="12%">
         </button>
