--- a/home.html
+++ b/home.html
@@ -47,26 +47,27 @@
 
 <section class="sidebar-tables">       
   <div class="sidebar">
-    <div class="menu">
-      <h3>Menu</h3>
-    </div>
     <ul class="list-unstyled ps-0">
       <li class="mb-1">
         <button class="btn btn-toggle align-items-center rounded collapsed" data-bs-toggle="collapse" data-bs-target="#home-collapse" aria-expanded="false">
-          <span>Usuários</span>
-          <img src="./images/outline_manage_accounts_white_48dp.png" alt="" width="12%">
+          <div class="set1">
+            <img src="./images/outline_manage_accounts_white_48dp.png" alt="" width="22">
+            <span>Usuários</span>
+          </div>
         </button>
         <div class="collapse" id="home-collapse">
           <ul class="btn-toggle-nav list-unstyled fw-normal pb-1 small">
-            <li><a href="#" class="link-dark rounded">Cadastrar usuário</a></li>
-            <li><a href="#" class="link-dark rounded">Gerenciar usuários</a></li>
+            <li><a href="#" class="link-dark rounded"> <p>Cadastrar usuário</p></a></li>
+            <li><a href="#" class="link-dark rounded">Gerenciar usuário</a></li>
           </ul>
         </div>
       </li>
       <li class="mb-1">
         <button class="btn btn-toggle align-items-center rounded collapsed" data-bs-toggle="collapse" data-bs-target="#dashboard-collapse" aria-expanded="false">
-          <span>Vendas</span>
-          <img class="dashboard-shop" src="./images/baseline_shopping_bag_white_48dp.png" alt="" width="12%">
+          <div class="set1">
+            <img class="dashboard-shop" src="./images/baseline_shopping_bag_white_48dp.png" alt="" width="22">
+            <span>Vendas</span>
+          </div>
         </button>
         <div class="collapse" id="dashboard-collapse">
           <ul class="btn-toggle-nav list-unstyled fw-normal pb-1 small">
@@ -77,8 +78,10 @@
       </li>
       <li class="mb-1">
         <button class="btn btn-toggle align-items-center rounded collapsed" data-bs-toggle="collapse" data-bs-target="#orders-collapse" aria-expanded="false">
-          <span>Produtos</span>
-          <img src="./images/baseline_inventory_2_white_48dp.png" alt="" width="12%">
+          <div class="set1">
+            <img src="./images/baseline_inventory_2_white_48dp.png" alt="" width="22">
+            <span>Produtos</span>
+          </div>
         </button>
         <div class="collapse" id="orders-collapse">
           <ul class="btn-toggle-nav list-unstyled fw-normal pb-1 small">
@@ -90,8 +93,10 @@
       </li>
       <li class="mb-1">
         <button class="btn btn-toggle align-items-center rounded collapsed" data-bs-toggle="collapse" data-bs-target="#account-collapse" aria-expanded="false">
-          <span>Relatórios</span>
-          <img src="./images/baseline_leaderboard_white_48dp.png" alt="" width="12%">
+          <div class="set1">
+            <img src="./images/baseline_leaderboard_white_48dp.png" alt="" width="22">
+            <span>Relatórios</span>
+          </div>
         </button>
         <div class="collapse" id="account-collapse">
           <ul class="btn-toggle-nav list-unstyled fw-normal pb-1 small">
@@ -104,26 +109,30 @@
       <div class="mb">
       <li class="mb-1">
         <button class="btn btn-toggle align-items-center rounded collapsed" data-bs-toggle="collapse" data-bs-target="collapse" aria-expanded="true">
-          <span>Encomendas</span>
-          <img src="./images/baseline_local_shipping_white_48dp.png" alt="" width="12%">
+          <div class="set1">
+            <img src="./images/baseline_local_shipping_white_48dp.png" alt="" width="22">
+            <span>Encomendas</span>
+          </div>
         </button>
       </li>
       <li class="mb-1">
         <button class="btn btn-toggle align-items-center rounded collapsed" data-bs-toggle="collapse" data-bs-target="collapse" aria-expanded="true">
-          <span>Histórico</span>
-          <img src="./images/baseline_history_white_48dp.png" alt="" width="12%">
+          <div class="set1">
+            <img src="./images/baseline_history_white_48dp.png" alt="" width="22">
+            <span>Histórico</span>
+          </div>
         </button>
       </li>
       <li class="mb-1">
         <button class="btn btn-toggle align-items-center rounded collapsed" data-bs-toggle="collapse" data-bs-target="collapse" aria-expanded="true">
           <span>Configurações</span>
-          <img src="./images/baseline_settings_white_48dp.png" alt="" width="12%">
+          <img src="./images/baseline_settings_white_48dp.png" alt="" width="22">
         </button>
       </li>
       <li class="mb-1">
         <button class="btn btn-toggle align-items-center rounded collapsed" data-bs-toggle="collapse" data-bs-target="collapse" aria-expanded="true">
           <span>Suporte</span>
-          <img src="./images/baseline_help_center_white_48dp.png" alt="" width="12%">
+          <img src="./images/baseline_help_center_white_48dp.png" alt="" width="22">
         </button>
       </li>
     </div>
