--- a/home.html
+++ b/home.html
@@ -9,11 +9,12 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
   <link rel="stylesheet" type="text/css" href="css/home.css" />
   <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="icon" href="./images/y.png"   sizes="any"  >
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@500;600;700;800;900&display=swap" rel="stylesheet">
 </head>
 <body>
-<div>
+<div class="a" >
     <div class="content">
       <div id="home">
           <header class="bar-status">
@@ -44,10 +45,15 @@
               </li>
             </ul>
           </header>
-
+<div class="consert">
 <section class="sidebar-tables">       
   <div class="sidebar">
     <ul class="list-unstyled ps-0">
+      <li class="mb-1">
+        <div class="sidebar-logo">
+          <h6>SysUnity</h6>
+        </div>
+      </li>
       <li class="mb-1">
         <button class="btn btn-toggle align-items-center rounded collapsed shadow-none" data-bs-toggle="collapse" data-bs-target="#home-collapse" aria-expanded="false">
           <div class="set1">
@@ -125,38 +131,27 @@
       </li>
       <li class="mb-1">
         <button class="btn btn-toggle align-items-center rounded collapsed  shadow-none" data-bs-toggle="collapse" data-bs-target="collapse" aria-expanded="true">
-          <span>Configurações</span>
+          <div class="set1">
+            <span>Configurações</span>
+          </div>
           <img src="./images/baseline_settings_white_48dp.png" alt="" width="22">
         </button>
       </li>
       <li class="mb-1">
         <button class="btn btn-toggle align-items-center rounded collapsed  shadow-none" data-bs-toggle="collapse" data-bs-target="collapse" aria-expanded="true">
-          <span>Suporte</span>
-          <img src="./images/baseline_help_center_white_48dp.png" alt="" width="22">
+          <div class="set1">
+            <img src="./images/baseline_help_center_white_48dp.png" alt="" width="22">
+            <span>Suporte</span>
+          </div>
         </button>
       </li>
     </div>
     </ul>
   </div>
-
+</section>
           
 <!--Barra de alerta-->
 <section class="content-table">
-  <header class="alerts">
-    <div class="danger">
-      <img src="images/danger-yelow.png" alt="alerta">
-      <p>3 dias</p>
-    </div>
-    <div class="danger">
-      <img src="images/danger-orange.png" alt="alerta">
-      <p>2 dias</p>
-    </div>
-    <div class="danger">
-      <img src="images/danger-red.png" alt="alerta">
-      <p>1 dia</p>
-    </div>
-  </header>
-
 <!--Tabela Encomendas-->
 <section class="section-table">
   <h2>Encomendas</h2>
@@ -209,9 +204,10 @@
       <div class="link-see-more"><a href="">Ver Mais</a></div>    
   </section>
 </section>
-</section>
+
     </div>
   </div> 
+</div>
 </div>
 </body>
 </html>
