adicionando os id das ul

--- a/home.html
+++ b/home.html
@@ -22,7 +22,7 @@
               <h1 id="hello">Olá Taila,</h1>
               <h1>seja bem vinda!</h1>
             </div>
-            <ul class="bar-login">
+            <ul class="bar-login" id="usuario_configuracoes">
               <li id="usuario">
                 <div class="btn-group">
                   <button class="btn btn-secondary btn-lg dropdown-toggle . shadow-none" type="button" data-bs-toggle="dropdown" aria-expanded="false">
@@ -62,7 +62,7 @@
           </div>
         </button>
         <div class="collapse" id="home-collapse">
-          <ul class="btn-toggle-nav list-unstyled fw-normal pb-1 small">
+          <ul class="btn-toggle-nav list-unstyled fw-normal pb-1 small" id="ul_usuario">
             <li><a href="#" class="link-dark rounded"> <p>Cadastrar usuário</p></a></li>
             <li><a href="#" class="link-dark rounded">Gerenciar usuário</a></li>
           </ul>
@@ -76,7 +76,7 @@
           </div>
         </button>
         <div class="collapse" id="dashboard-collapse">
-          <ul class="btn-toggle-nav list-unstyled fw-normal pb-1 small">
+          <ul class="btn-toggle-nav list-unstyled fw-normal pb-1 small" id="ul_vendas">
             <li><a href="#" class="link-dark rounded">Cadastrar vendas</a></li>
             <li><a href="#" class="link-dark rounded">Gerenciar vendas</a></li>
           </ul>
@@ -90,7 +90,7 @@
           </div>
         </button>
         <div class="collapse" id="orders-collapse">
-          <ul class="btn-toggle-nav list-unstyled fw-normal pb-1 small">
+          <ul class="btn-toggle-nav list-unstyled fw-normal pb-1 small" id="ul_produtos">
             <li><a href="#" class="link-dark rounded">Cadastrar produtos</a></li>
             <li><a href="#" class="link-dark rounded">Cadastrar nova produção</a></li>
             <li><a href="#" class="link-dark rounded">Gerenciar produtos</a></li>
@@ -105,7 +105,7 @@
           </div>
         </button>
         <div class="collapse" id="account-collapse">
-          <ul class="btn-toggle-nav list-unstyled fw-normal pb-1 small">
+          <ul class="btn-toggle-nav list-unstyled fw-normal pb-1 small" id="ul_relatorios">
             <li><a href="#" class="link-dark rounded">Relatórios gerais</a></li>
             <li><a href="#" class="link-dark rounded">Relatórios de vendas</a></li>
             <li><a href="#" class="link-dark rounded">Relatórios de produtos</a></li>
