reajuste no height da sidebar

--- a/home.html
+++ b/home.html
@@ -14,7 +14,6 @@
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@500;600;700;800;900&display=swap" rel="stylesheet">
 </head>
 <body>
-<div class="a" >
     <div class="content">
       <div id="home">
           <header class="bar-status">
@@ -45,9 +44,9 @@
               </li>
             </ul>
           </header>
-<div class="consert">
-<section class="sidebar-tables">       
-  <div class="sidebar">
+ 
+  <div class="centro">
+  <section class="sidebar">
     <ul class="list-unstyled ps-0">
       <li class="mb-1">
         <div class="sidebar-logo">
@@ -147,7 +146,6 @@
       </li>
     </div>
     </ul>
-  </div>
 </section>
           
 <!--Barra de alerta-->
@@ -204,10 +202,8 @@
       <div class="link-see-more"><a href="">Ver Mais</a></div>    
   </section>
 </section>
-
     </div>
   </div> 
-</div>
 </div>
 </body>
 </html>
