--- a/home.html
+++ b/home.html
@@ -17,34 +17,7 @@
 <div class="a" >
     <div class="content">
       <div id="home">
-          <header class="bar-status">
-            <div class="welcome">    
-              <h1 id="hello">Olá Taila,</h1>
-              <h1>seja bem vinda!</h1>
-            </div>
-            <ul class="bar-login">
-              <li id="usuario">
-                <div class="btn-group">
-                  <button class="btn btn-secondary btn-lg dropdown-toggle . shadow-none" type="button" data-bs-toggle="dropdown" aria-expanded="false">
-                      <img src="images/baseline_account_circle_black_48dp.png" alt="" width="20%">
-                      Taila Santos
-                  </button>
-                  <ul class="dropdown-menu">
-                    <li>
-                      <a href="#">Configurações
-                      <img src="images/baseline_settings_black_48dp.png" alt="" width="15%">
-                     </a>
-                    </li>
-                    <li>
-                      <a href="#">Sair
-                      <img src="images/baseline_logout_black_48dp.png" alt="" width="15%">
-                      </a> 
-                    </li>
-                  </ul>
-                </div>
-              </li>
-            </ul>
-          </header>
+       
 <div class="consert">
 <section class="sidebar-tables">       
   <div class="sidebar">
@@ -152,7 +125,34 @@
           
 <!--Barra de alerta-->
 <section class="content-table">
-<!--Tabela Encomendas-->
+  <header class="bar-status">
+    <div class="welcome">    
+      <h1 id="hello">Olá Taila,</h1>
+      <h1>seja bem vinda!</h1>
+    </div>
+    <ul class="bar-login">
+      <li id="usuario">
+        <div class="btn-group">
+          <button class="btn btn-secondary btn-lg dropdown-toggle . shadow-none" type="button" data-bs-toggle="dropdown" aria-expanded="false">
+              <img src="images/account_circle_black_36dp.svg" alt="" width="20%">
+              Taila Santos
+          </button>
+          <ul class="dropdown-menu">
+            <li>
+              <a href="#">Configurações
+              <img src="images/baseline_settings_black_48dp.png" alt="" width="15%">
+             </a>
+            </li>
+            <li>
+              <a href="#">Sair
+              <img src="images/baseline_logout_black_48dp.png" alt="" width="15%">
+              </a> 
+            </li>
+          </ul>
+        </div>
+      </li>
+    </ul>
+  </header>
 <section class="section-table">
   <h2>Encomendas</h2>
   <table class="table">
