--- a/index.html
+++ b/index.html
@@ -25,11 +25,11 @@
         <h2>Login</h2>
           <p>
             <label for="usuario_login">Usuário</label>
-            <input id="usuario_login" name="usuario_login" required="required" type="text" placeholder="digite seu usuário..."/>
+            <input id="usuario_login" name="usuario_login" required type="text" placeholder="digite seu usuário..."/>
           </p>
           <p>
             <label for="senha_login">Senha</label>
-            <input id="senha_login" name="senha_login" required="required" type="password" placeholder="digite sua senha..."/>
+            <input id="senha_login" name="senha_login" required type="password" placeholder="digite sua senha..."/>
           </p>
             <div class="btn-group">
             <button class="btn btn-primary" id="btn_Entrar" type="button">ENTRAR</button>
