adicionando msg de erro

--- a/index.html
+++ b/index.html
@@ -26,10 +26,12 @@
           <p>
             <label for="usuario_login">Usuário</label>
             <input id="usuario_login" name="usuario_login" required type="text" placeholder="digite seu usuário..."/>
+            <p class="none">O campo precisa ser preenchido!</p>
           </p>
           <p>
             <label for="senha_login">Senha</label>
             <input id="senha_login" name="senha_login" required type="password" placeholder="digite sua senha..."/>
+            <p class="none">O campo precisa ser preenchido!</p>
           </p>
             <div class="btn-group">
             <button class="btn btn-primary" id="btn_Entrar" type="button">ENTRAR</button>
