--- a/index.html
+++ b/index.html
@@ -25,12 +25,12 @@
         <h2>Login</h2>
           <p>
             <label for="usuario_login">Usuário</label>
-            <input id="usuario_login" name="usuario_login" required type="text" placeholder="digite seu usuário..."/>
+            <input id="usuario_login" name="usuario_login" type="text" placeholder="digite seu usuário..." required/>
             <p class="none">O campo precisa ser preenchido!</p>
           </p>
           <p>
             <label for="senha_login">Senha</label>
-            <input id="senha_login" name="senha_login" required type="password" placeholder="digite sua senha..."/>
+            <input id="senha_login" name="senha_login" type="password" placeholder="digite sua senha..." required/>
             <p class="none">O campo precisa ser preenchido!</p>
           </p>
             <div class="btn-group">
