alterando o tipo do button

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             <p class="none">O campo precisa ser preenchido!</p>
           </p>
             <div class="btn-group">
-            <button class="btn btn-primary" id="btn_Entrar" type="submit">ENTRAR</button>
+            <button class="btn btn-primary" id="btn_Entrar" type="button">ENTRAR</button>
       
       </div>
   </div> 
