--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
           <p>
             <label for="senha_login">Senha</label>
             <input id="senha_login" name="senha_login" type="password" placeholder="digite sua senha..." required/>
-            <p class="msgErro">O Campo precisa ser preenchido</p>
+            <p id="msgErro">O Campo precisa ser preenchido</p>
           </p>
             <div class="btn-group">
             <button class="btn btn-primary" id="btn_Entrar" type="button">ENTRAR</button>
