removendo frase seja bem-vindo da header-Title-css

--- a/home.html
+++ b/home.html
@@ -126,7 +126,7 @@
   <header class="bar-status">
     <div class="welcome">    
       <h1 id="hello">Olá Taila,</h1>
-      <h1>seja bem vinda!</h1>
+      <h1 id="welcome">seja bem vinda!</h1>
     </div>
     <ul class="bar-login">
       <li id="usuario">
