teste para msg de erro

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
           <p>
             <label for="senha_login">Senha</label>
             <input id="senha_login" name="senha_login" type="password" placeholder="digite sua senha..." required/>
-            <p id="msgErro" class="msgErro2">O Campo precisa ser preenchido</p>
+            <p id="msgErro" style="display: none;">O Campo precisa ser preenchido</p>
           </p>
             <div class="btn-group">
             <button class="btn btn-primary" id="btn_Entrar" type="button">ENTRAR</button>
