adicionando link e id na parte da barra do usuario

--- a/home.html
+++ b/home.html
@@ -135,14 +135,14 @@
               <img src="images/account_circle_black_36dp.svg" alt="" width="20%">
               Taila Santos
           </button>
-          <ul class="dropdown-menu">
+          <ul class="dropdown-menu" id="usuario_configuracoes">
             <li>
-              <a href="#">Configurações
+              <a href="javascript://">Configurações
               <img src="images/baseline_settings_black_48dp.png" alt="" width="15%">
              </a>
             </li>
             <li>
-              <a href="#">Sair
+              <a href="javascript://">Sair
               <img src="images/baseline_logout_black_48dp.png" alt="" width="15%">
               </a> 
             </li>
