adicionando class na li

--- a/home.html
+++ b/home.html
@@ -35,8 +35,8 @@
         </button>
         <div class="collapse" id="home-collapse">
           <ul class="btn-toggle-nav list-unstyled fw-normal pb-1 small" id="ul_usuario">
-            <li><a href="javascript://" class="link-dark rounded"> <p>Cadastrar usuário</p></a></li>
-            <li><a href="javascript://" class="link-dark rounded">Gerenciar usuário</a></li>
+            <li class="li-p"><a href="javascript://" class="link-dark rounded"> <p>Cadastrar usuário</p></a></li>
+            <li class="li-p"><a href="javascript://" class="link-dark rounded">Gerenciar usuário</a></li>
           </ul>
         </div>
       </li>
@@ -49,8 +49,8 @@
         </button>
         <div class="collapse" id="dashboard-collapse">
           <ul class="btn-toggle-nav list-unstyled fw-normal pb-1 small" id="ul_vendas">
-            <li><a href="javascript://" class="link-dark rounded">Cadastrar vendas</a></li>
-            <li><a href="javascript://" class="link-dark rounded">Gerenciar vendas</a></li>
+            <li class="li-p"><a href="javascript://" class="link-dark rounded">Cadastrar vendas</a></li>
+            <li class="li-p"><a href="javascript://" class="link-dark rounded">Gerenciar vendas</a></li>
           </ul>
         </div>
       </li>
@@ -63,9 +63,9 @@
         </button>
         <div class="collapse" id="orders-collapse">
           <ul class="btn-toggle-nav list-unstyled fw-normal pb-1 small" id="ul_produtos">
-            <li><a href="javascript://" class="link-dark rounded">Cadastrar produtos</a></li>
-            <li><a href="javascript://" class="link-dark rounded">Cadastrar nova produção</a></li>
-            <li><a href="javascript://" class="link-dark rounded">Gerenciar produtos</a></li>
+            <li class="li-p"><a href="javascript://" class="link-dark rounded">Cadastrar produtos</a></li>
+            <li class="li-p"><a href="javascript://" class="link-dark rounded">Cadastrar nova produção</a></li>
+            <li class="li-p"><a href="javascript://" class="link-dark rounded">Gerenciar produtos</a></li>
           </ul>
         </div>
       </li>
@@ -78,9 +78,9 @@
         </button>
         <div class="collapse" id="account-collapse">
           <ul class="btn-toggle-nav list-unstyled fw-normal pb-1 small" id="ul_relatorios">
-            <li><a href="javascript://" class="link-dark rounded">Relatórios gerais</a></li>
-            <li><a href="javascript://" class="link-dark rounded">Relatórios de vendas</a></li>
-            <li><a href="javascript://" class="link-dark rounded">Relatórios de produtos</a></li>
+            <li class="li-p"><a href="javascript://" class="link-dark rounded">Relatórios gerais</a></li>
+            <li class="li-p"><a href="javascript://" class="link-dark rounded">Relatórios de vendas</a></li>
+            <li class="li-p"><a href="javascript://" class="link-dark rounded">Relatórios de produtos</a></li>
           </ul>
         </div>
       </li>
@@ -136,12 +136,12 @@
               Taila Santos
           </button>
           <ul class="dropdown-menu" id="usuario_configuracoes">
-            <li>
+            <li class="li-p">
               <a href="javascript://">Configurações
               <img src="images/baseline_settings_black_48dp.png" alt="" width="15%">
              </a>
             </li>
-            <li>
+            <li class="li-p">
               <a href="javascript://">Sair
               <img src="images/baseline_logout_black_48dp.png" alt="" width="15%">
               </a> 
