--- a/home.html
+++ b/home.html
@@ -49,8 +49,8 @@
         </button>
         <div class="collapse" id="dashboard-collapse">
           <ul class="btn-toggle-nav list-unstyled fw-normal pb-1 small" id="ul_vendas">
-            <li class="li-p"><a href="javascript://" class="link-dark rounded">Cadastrar vendas</a></li>
-            <li class="li-p"><a href="javascript://" class="link-dark rounded">Gerenciar vendas</a></li>
+            <li><a href="#" class="link-dark rounded">Cadastrar vendas</a></li>
+            <li><a href="#" class="link-dark rounded">Gerenciar vendas</a></li>
           </ul>
         </div>
       </li>
@@ -63,9 +63,9 @@
         </button>
         <div class="collapse" id="orders-collapse">
           <ul class="btn-toggle-nav list-unstyled fw-normal pb-1 small" id="ul_produtos">
-            <li class="li-p"><a href="javascript://" class="link-dark rounded">Cadastrar produtos</a></li>
-            <li class="li-p"><a href="javascript://" class="link-dark rounded">Cadastrar nova produção</a></li>
-            <li class="li-p"><a href="javascript://" class="link-dark rounded">Gerenciar produtos</a></li>
+            <li"><a href="#" class="link-dark rounded">Cadastrar produtos</a></li>
+            <li><a href="#" class="link-dark rounded">Cadastrar nova produção</a></li>
+            <li"><a href="#" class="link-dark rounded">Gerenciar produtos</a></li>
           </ul>
         </div>
       </li>
@@ -78,9 +78,9 @@
         </button>
         <div class="collapse" id="account-collapse">
           <ul class="btn-toggle-nav list-unstyled fw-normal pb-1 small" id="ul_relatorios">
-            <li class="li-p"><a href="javascript://" class="link-dark rounded">Relatórios gerais</a></li>
-            <li class="li-p"><a href="javascript://" class="link-dark rounded">Relatórios de vendas</a></li>
-            <li class="li-p"><a href="javascript://" class="link-dark rounded">Relatórios de produtos</a></li>
+            <li><a href="#" class="link-dark rounded">Relatórios gerais</a></li>
+            <li><a href="#" class="link-dark rounded">Relatórios de vendas</a></li>
+            <li><a href="#" class="link-dark rounded">Relatórios de produtos</a></li>
           </ul>
         </div>
       </li>
@@ -136,13 +136,13 @@
               Taila Santos
           </button>
           <ul class="dropdown-menu" id="usuario_configuracoes">
-            <li class="li-p">
-              <a href="javascript://">Configurações
+            <li>
+              <a href="#">Configurações
               <img src="images/baseline_settings_black_48dp.png" alt="" width="15%">
              </a>
             </li>
-            <li class="li-p">
-              <a href="javascript://">Sair
+            <li>
+              <a href="#">Sair
               <img src="images/baseline_logout_black_48dp.png" alt="" width="15%">
               </a> 
             </li>
