--- a/home.html
+++ b/home.html
@@ -35,8 +35,8 @@
         </button>
         <div class="collapse" id="home-collapse">
           <ul class="btn-toggle-nav list-unstyled fw-normal pb-1 small" id="ul_usuario">
-            <li class="li-p"><a href="javascript://" class="link-dark rounded"> <p>Cadastrar usuário</p></a></li>
-            <li class="li-p"><a href="javascript://" class="link-dark rounded">Gerenciar usuário</a></li>
+            <li><a href="#" class="link-dark rounded"> <p>Cadastrar usuário</p></a></li>
+            <li><a href="#" class="link-dark rounded">Gerenciar usuário</a></li>
           </ul>
         </div>
       </li>
@@ -63,9 +63,9 @@
         </button>
         <div class="collapse" id="orders-collapse">
           <ul class="btn-toggle-nav list-unstyled fw-normal pb-1 small" id="ul_produtos">
-            <li"><a href="#" class="link-dark rounded">Cadastrar produtos</a></li>
+            <li><a href="#" class="link-dark rounded">Cadastrar produtos</a></li>
             <li><a href="#" class="link-dark rounded">Cadastrar nova produção</a></li>
-            <li"><a href="#" class="link-dark rounded">Gerenciar produtos</a></li>
+            <li><a href="#" class="link-dark rounded">Gerenciar produtos</a></li>
           </ul>
         </div>
       </li>
