teste5 link sidebar

--- a/home.html
+++ b/home.html
@@ -35,7 +35,7 @@
         </button>
         <div class="collapse" id="home-collapse">
           <ul class="btn-toggle-nav list-unstyled fw-normal pb-1 small" id="ul_usuario">
-            <li><a href="cadastrar_usuario.html" class="link-dark rounded"> <p>Cadastrar usuário</p></a></li>
+            <li><a href="home.js" class="link-dark rounded"> <p>Cadastrar usuário</p></a></li>
             <li><a href="#" class="link-dark rounded">Gerenciar usuário</a></li>
           </ul>
         </div>
