adicionando link do jquery

--- a/home.html
+++ b/home.html
@@ -35,8 +35,8 @@
         </button>
         <div class="collapse" id="home-collapse">
           <ul class="btn-toggle-nav list-unstyled fw-normal pb-1 small" id="ul_usuario">
-            <li><a href="#" class="link-dark rounded" onclick="redirecionarUsuario();"> <p>Cadastrar usuário</p></a></li>
-            <li><a href="#" class="link-dark rounded">Gerenciar usuário</a></li>
+            <li><a href="javascript://" class="link-dark rounded"> <p>Cadastrar usuário</p></a></li>
+            <li><a href="javascript://" class="link-dark rounded">Gerenciar usuário</a></li>
           </ul>
         </div>
       </li>
@@ -206,6 +206,7 @@
   </div> 
 </div>
 
+  <script src="http://code.jquery.com/jquery-1.11.3.min.js"></script>
   <script src="home.js"></script>
 </body>
 </html>
