removendo id das ul e adc o link para redirecionar

--- a/home.html
+++ b/home.html
@@ -34,9 +34,9 @@
           </div>
         </button>
         <div class="collapse" id="home-collapse">
-          <ul class="btn-toggle-nav list-unstyled fw-normal pb-1 small" id="ul_usuario">
-            <li><a href="javascript://" class="link-dark rounded"> <p>Cadastrar usuário</p></a></li>
-            <li><a href="javascript://" class="link-dark rounded">Gerenciar usuário</a></li>
+          <ul class="btn-toggle-nav list-unstyled fw-normal pb-1 small">
+            <li><a href="cadastrar_usuario.html" class="link-dark rounded"> <p>Cadastrar usuário</p></a></li>
+            <li><a href="gerenciar_usuario.html" class="link-dark rounded">Gerenciar usuário</a></li>
           </ul>
         </div>
       </li>
@@ -48,9 +48,9 @@
           </div>
         </button>
         <div class="collapse" id="dashboard-collapse">
-          <ul class="btn-toggle-nav list-unstyled fw-normal pb-1 small" id="ul_vendas">
-            <li><a href="#" class="link-dark rounded">Cadastrar vendas</a></li>
-            <li><a href="#" class="link-dark rounded">Gerenciar vendas</a></li>
+          <ul class="btn-toggle-nav list-unstyled fw-normal pb-1 small">
+            <li><a href="cadastrar_vendas.html" class="link-dark rounded">Cadastrar vendas</a></li>
+            <li><a href="gerenciar_vendas.html" class="link-dark rounded">Gerenciar vendas</a></li>
           </ul>
         </div>
       </li>
@@ -62,10 +62,10 @@
           </div>
         </button>
         <div class="collapse" id="orders-collapse">
-          <ul class="btn-toggle-nav list-unstyled fw-normal pb-1 small" id="ul_produtos">
-            <li><a href="#" class="link-dark rounded">Cadastrar produtos</a></li>
-            <li><a href="#" class="link-dark rounded">Cadastrar nova produção</a></li>
-            <li><a href="#" class="link-dark rounded">Gerenciar produtos</a></li>
+          <ul class="btn-toggle-nav list-unstyled fw-normal pb-1 small">
+            <li><a href="cadastrar_produtos.html" class="link-dark rounded">Cadastrar produtos</a></li>
+            <li><a href="cadastrar_producao.html" class="link-dark rounded">Cadastrarprodução</a></li>
+            <li><a href="gerenciar_produtos.html" class="link-dark rounded">Gerenciar produtos</a></li>
           </ul>
         </div>
       </li>
@@ -77,10 +77,10 @@
           </div>
         </button>
         <div class="collapse" id="account-collapse">
-          <ul class="btn-toggle-nav list-unstyled fw-normal pb-1 small" id="ul_relatorios">
-            <li><a href="#" class="link-dark rounded">Relatórios gerais</a></li>
-            <li><a href="#" class="link-dark rounded">Relatórios de vendas</a></li>
-            <li><a href="#" class="link-dark rounded">Relatórios de produtos</a></li>
+          <ul class="btn-toggle-nav list-unstyled fw-normal pb-1 small">
+            <li><a href="relatorios_gerais.html" class="link-dark rounded">Relatórios gerais</a></li>
+            <li><a href="relatorios_vendas.html" class="link-dark rounded">Relatórios de vendas</a></li>
+            <li><a href="relatorios_produtos.html" class="link-dark rounded">Relatórios de produtos</a></li>
           </ul>
         </div>
       </li>
@@ -137,12 +137,12 @@
           </button>
           <ul class="dropdown-menu" id="usuario_configuracoes">
             <li>
-              <a href="#">Configurações
+              <a href="editar_usuario.html">Configurações
               <img src="images/baseline_settings_black_48dp.png" alt="" width="15%">
              </a>
             </li>
             <li>
-              <a href="#">Sair
+              <a href="index.html">Sair
               <img src="images/baseline_logout_black_48dp.png" alt="" width="15%">
               </a> 
             </li>
@@ -206,7 +206,6 @@
   </div> 
 </div>
 
-  <script src="http://code.jquery.com/jquery-1.11.3.min.js"></script>
   <script src="home.js"></script>
 </body>
 </html>
