adc id p/ redirecionar as li sem o dropdown

--- a/home.html
+++ b/home.html
@@ -85,7 +85,7 @@
         </div>
       </li>
       <div class="mb">
-      <li class="mb-1">
+      <li class="mb-1" id="encomendas">
         <button class="btn btn-toggle align-items-center rounded collapsed shadow-none" data-bs-toggle="collapse" data-bs-target="collapse" aria-expanded="true">
           <div class="set1">
             <img src="./images/baseline_local_shipping_white_48dp.png" alt="" width="22">
@@ -93,7 +93,7 @@
           </div>
         </button>
       </li>
-      <li class="mb-1">
+      <li class="mb-1" id="historico">
         <button class="btn btn-toggle align-items-center rounded collapsed shadow-none" data-bs-toggle="collapse" data-bs-target="collapse" aria-expanded="true">
           <div class="set1">
             <img src="./images/baseline_history_white_48dp.png" alt="" width="22">
@@ -101,7 +101,7 @@
           </div>
         </button>
       </li>
-      <li class="mb-1">
+      <li class="mb-1" id="configuracoes">
         <button class="btn btn-toggle align-items-center rounded collapsed  shadow-none" data-bs-toggle="collapse" data-bs-target="collapse" aria-expanded="true">
           <div class="set1">
             <span>Configurações</span>
@@ -109,7 +109,7 @@
           <img src="./images/baseline_settings_white_48dp.png" alt="" width="22">
         </button>
       </li>
-      <li class="mb-1">
+      <li class="mb-1" id="suporte">
         <button class="btn btn-toggle align-items-center rounded collapsed  shadow-none" data-bs-toggle="collapse" data-bs-target="collapse" aria-expanded="true">
           <div class="set1">
             <img src="./images/baseline_help_center_white_48dp.png" alt="" width="22">
