--- a/home.html
+++ b/home.html
@@ -85,33 +85,33 @@
         </div>
       </li>
       <div class="mb">
-      <li class="mb-1" id="encomendas">
+      <li class="mb-1">
         <button class="btn btn-toggle align-items-center rounded collapsed shadow-none" data-bs-toggle="collapse" data-bs-target="collapse" aria-expanded="true">
-          <div class="set1">
+          <div class="set1" id="encomendas">
             <img src="./images/baseline_local_shipping_white_48dp.png" alt="" width="22">
             <span>Encomendas</span>
           </div>
         </button>
       </li>
-      <li class="mb-1" id="historico">
+      <li class="mb-1">
         <button class="btn btn-toggle align-items-center rounded collapsed shadow-none" data-bs-toggle="collapse" data-bs-target="collapse" aria-expanded="true">
-          <div class="set1">
+          <div class="set1" id="historico">
             <img src="./images/baseline_history_white_48dp.png" alt="" width="22">
             <span>Histórico</span>
           </div>
         </button>
       </li>
-      <li class="mb-1" id="configuracoes">
+      <li class="mb-1">
         <button class="btn btn-toggle align-items-center rounded collapsed  shadow-none" data-bs-toggle="collapse" data-bs-target="collapse" aria-expanded="true">
-          <div class="set1">
+          <div class="set1" id="configuracoes">
             <span>Configurações</span>
           </div>
           <img src="./images/baseline_settings_white_48dp.png" alt="" width="22">
         </button>
       </li>
-      <li class="mb-1" id="suporte">
+      <li class="mb-1">
         <button class="btn btn-toggle align-items-center rounded collapsed  shadow-none" data-bs-toggle="collapse" data-bs-target="collapse" aria-expanded="true">
-          <div class="set1">
+          <div class="set1" id="suporte">
             <img src="./images/baseline_help_center_white_48dp.png" alt="" width="22">
             <span>Suporte</span>
           </div>
