teste - alterando as id para tag span

--- a/home.html
+++ b/home.html
@@ -87,33 +87,33 @@
       <div class="mb">
       <li class="mb-1">
         <button class="btn btn-toggle align-items-center rounded collapsed shadow-none" data-bs-toggle="collapse" data-bs-target="collapse" aria-expanded="true">
-          <div class="set1" id="encomendas">
+          <div class="set1">
             <img src="./images/baseline_local_shipping_white_48dp.png" alt="" width="22">
-            <span>Encomendas</span>
+            <span id="encomendas">Encomendas</span>
           </div>
         </button>
       </li>
       <li class="mb-1">
         <button class="btn btn-toggle align-items-center rounded collapsed shadow-none" data-bs-toggle="collapse" data-bs-target="collapse" aria-expanded="true">
-          <div class="set1" id="historico">
+          <div class="set1">
             <img src="./images/baseline_history_white_48dp.png" alt="" width="22">
-            <span>Histórico</span>
+            <span id="historico">Histórico</span>
           </div>
         </button>
       </li>
       <li class="mb-1">
         <button class="btn btn-toggle align-items-center rounded collapsed  shadow-none" data-bs-toggle="collapse" data-bs-target="collapse" aria-expanded="true">
-          <div class="set1" id="configuracoes">
-            <span>Configurações</span>
+          <div class="set1">
+            <span id="configuracoes">Configurações</span>
           </div>
           <img src="./images/baseline_settings_white_48dp.png" alt="" width="22">
         </button>
       </li>
       <li class="mb-1">
         <button class="btn btn-toggle align-items-center rounded collapsed  shadow-none" data-bs-toggle="collapse" data-bs-target="collapse" aria-expanded="true">
-          <div class="set1" id="suporte">
+          <div class="set1">
             <img src="./images/baseline_help_center_white_48dp.png" alt="" width="22">
-            <span>Suporte</span>
+            <span id="suporte">Suporte</span>
           </div>
         </button>
       </li>
