removendo as id da tag span e adc nos button

--- a/home.html
+++ b/home.html
@@ -86,34 +86,34 @@
       </li>
       <div class="mb">
       <li class="mb-1">
-        <button class="btn btn-toggle align-items-center rounded collapsed shadow-none" data-bs-toggle="collapse" data-bs-target="collapse" aria-expanded="true">
+        <button class="btn btn-toggle align-items-center rounded collapsed shadow-none" data-bs-toggle="collapse" data-bs-target="collapse" aria-expanded="true" id="encomendas">
           <div class="set1">
             <img src="./images/baseline_local_shipping_white_48dp.png" alt="" width="22">
-            <span id="encomendas">Encomendas</span>
+            <span>Encomendas</span>
           </div>
         </button>
       </li>
       <li class="mb-1">
-        <button class="btn btn-toggle align-items-center rounded collapsed shadow-none" data-bs-toggle="collapse" data-bs-target="collapse" aria-expanded="true">
+        <button class="btn btn-toggle align-items-center rounded collapsed shadow-none" data-bs-toggle="collapse" data-bs-target="collapse" aria-expanded="true" id="historico">
           <div class="set1">
             <img src="./images/baseline_history_white_48dp.png" alt="" width="22">
-            <span id="historico">Histórico</span>
+            <span>Histórico</span>
           </div>
         </button>
       </li>
       <li class="mb-1">
-        <button class="btn btn-toggle align-items-center rounded collapsed  shadow-none" data-bs-toggle="collapse" data-bs-target="collapse" aria-expanded="true">
+        <button class="btn btn-toggle align-items-center rounded collapsed  shadow-none" data-bs-toggle="collapse" data-bs-target="collapse" aria-expanded="true" id="configuracoes">
           <div class="set1">
-            <span id="configuracoes">Configurações</span>
+            <span>Configurações</span>
           </div>
           <img src="./images/baseline_settings_white_48dp.png" alt="" width="22">
         </button>
       </li>
       <li class="mb-1">
-        <button class="btn btn-toggle align-items-center rounded collapsed  shadow-none" data-bs-toggle="collapse" data-bs-target="collapse" aria-expanded="true">
+        <button class="btn btn-toggle align-items-center rounded collapsed  shadow-none" data-bs-toggle="collapse" data-bs-target="collapse" aria-expanded="true" id="suporte">
           <div class="set1">
             <img src="./images/baseline_help_center_white_48dp.png" alt="" width="22">
-            <span id="suporte">Suporte</span>
+            <span>Suporte</span>
           </div>
         </button>
       </li>
