removendo id, adc href nas li sem select

--- a/home.html
+++ b/home.html
@@ -35,7 +35,7 @@
         </button>
         <div class="collapse" id="home-collapse">
           <ul class="btn-toggle-nav list-unstyled fw-normal pb-1 small">
-            <li><a href="cadastrar_usuario.html" class="link-dark rounded"> <p>Cadastrar usuário</p></a></li>
+            <li><a href="cadastrar_usuario.html" class="link-dark rounded">Cadastrar usuário</a></li>
             <li><a href="gerenciar_usuario.html" class="link-dark rounded">Gerenciar usuário</a></li>
           </ul>
         </div>
@@ -64,7 +64,7 @@
         <div class="collapse" id="orders-collapse">
           <ul class="btn-toggle-nav list-unstyled fw-normal pb-1 small">
             <li><a href="cadastrar_produtos.html" class="link-dark rounded">Cadastrar produtos</a></li>
-            <li><a href="cadastrar_producao.html" class="link-dark rounded">Cadastrarprodução</a></li>
+            <li><a href="cadastrar_producao.html" class="link-dark rounded">Cadastrar produção</a></li>
             <li><a href="gerenciar_produtos.html" class="link-dark rounded">Gerenciar produtos</a></li>
           </ul>
         </div>
@@ -86,34 +86,34 @@
       </li>
       <div class="mb">
       <li class="mb-1">
-        <button class="btn btn-toggle align-items-center rounded collapsed shadow-none" data-bs-toggle="collapse" data-bs-target="collapse" aria-expanded="true" id="encomendas">
+        <button class="btn btn-toggle align-items-center rounded collapsed shadow-none" data-bs-toggle="collapse" data-bs-target="collapse" aria-expanded="true">
           <div class="set1">
             <img src="./images/baseline_local_shipping_white_48dp.png" alt="" width="22">
-            <span>Encomendas</span>
+            <a href="encomendas.html"><span>Encomendas</span></a>
           </div>
         </button>
       </li>
       <li class="mb-1">
-        <button class="btn btn-toggle align-items-center rounded collapsed shadow-none" data-bs-toggle="collapse" data-bs-target="collapse" aria-expanded="true" id="historico">
+        <button class="btn btn-toggle align-items-center rounded collapsed shadow-none" data-bs-toggle="collapse" data-bs-target="collapse" aria-expanded="true">
           <div class="set1">
             <img src="./images/baseline_history_white_48dp.png" alt="" width="22">
-            <span>Histórico</span>
+            <a href="historico.html"><span>Histórico</span></a>
           </div>
         </button>
       </li>
       <li class="mb-1">
-        <button class="btn btn-toggle align-items-center rounded collapsed  shadow-none" data-bs-toggle="collapse" data-bs-target="collapse" aria-expanded="true" id="configuracoes">
+        <button class="btn btn-toggle align-items-center rounded collapsed  shadow-none" data-bs-toggle="collapse" data-bs-target="collapse" aria-expanded="true">
           <div class="set1">
-            <span>Configurações</span>
+            <a href="configuracoes.html"><span>Configurações</span></a>
           </div>
           <img src="./images/baseline_settings_white_48dp.png" alt="" width="22">
         </button>
       </li>
       <li class="mb-1">
-        <button class="btn btn-toggle align-items-center rounded collapsed  shadow-none" data-bs-toggle="collapse" data-bs-target="collapse" aria-expanded="true" id="suporte">
+        <button class="btn btn-toggle align-items-center rounded collapsed  shadow-none" data-bs-toggle="collapse" data-bs-target="collapse" aria-expanded="true">
           <div class="set1">
             <img src="./images/baseline_help_center_white_48dp.png" alt="" width="22">
-            <span>Suporte</span>
+            <a href="suporte.html"><span>Suporte</span></a>
           </div>
         </button>
       </li>
