--- a/home.html
+++ b/home.html
@@ -135,7 +135,7 @@
               <img src="images/account_circle_black_36dp.svg" alt="" width="20%">
               Taila Santos
           </button>
-          <ul class="dropdown-menu" id="usuario_configuracoes">
+          <ul class="dropdown-menu">
             <li>
               <a href="editar_usuario.html">Configurações
               <img src="images/baseline_settings_black_48dp.png" alt="" width="15%">
