--- a/home.html
+++ b/home.html
@@ -89,7 +89,7 @@
         <button class="btn btn-toggle align-items-center rounded collapsed shadow-none" data-bs-toggle="collapse" data-bs-target="collapse" aria-expanded="true">
           <div class="set1">
             <img src="./images/baseline_local_shipping_white_48dp.png" alt="" width="22">
-            <span>Encomendas</span>
+            <a href="encomendas.html">Encomendas</a>
           </div>
         </button>
       </li>
@@ -97,14 +97,14 @@
         <button class="btn btn-toggle align-items-center rounded collapsed shadow-none" data-bs-toggle="collapse" data-bs-target="collapse" aria-expanded="true">
           <div class="set1">
             <img src="./images/baseline_history_white_48dp.png" alt="" width="22">
-            <span>Histórico</span>
+            <a href="historico.html">Histórico</a>
           </div>
         </button>
       </li>
       <li class="mb-1">
         <button class="btn btn-toggle align-items-center rounded collapsed  shadow-none" data-bs-toggle="collapse" data-bs-target="collapse" aria-expanded="true">
           <div class="set1">
-            <span>Configurações</span>
+            <a href="configuracoes.html">Configurações</a>
           </div>
           <img src="./images/baseline_settings_white_48dp.png" alt="" width="22">
         </button>
@@ -113,7 +113,7 @@
         <button class="btn btn-toggle align-items-center rounded collapsed  shadow-none" data-bs-toggle="collapse" data-bs-target="collapse" aria-expanded="true">
           <div class="set1">
             <img src="./images/baseline_help_center_white_48dp.png" alt="" width="22">
-            <span>Suporte</span>
+            <a href="suporte.html">Suporte</a>
           </div>
         </button>
       </li>
