implementado selectdropdown na tela de cadastro (em andamento)

--- a/user_registration.html
+++ b/user_registration.html
@@ -165,14 +165,36 @@
                             </p>
                         </div>
                         <div class="b">   
-                            <p>
-                                <label for="">Cargo</label>
-                                <input id="" name="" required="required" type="text" placeholder=""/>
-                            </p>
-                            <p>
-                                <label for="">Nivel de acesso</label>
-                                <input id="" name="" required="required" type="text" placeholder=""/>
-                            </p>
+                            
+                                <label for="">Cargo
+                                    <div class="btn-group">
+                                        <button class="btn btn-secondary btn-sm dropdown-toggle . shadow-none" type="button" data-bs-toggle="dropdown" aria-expanded="false">
+                                        Selecione
+                                        </button>
+                                        <ul class="dropdown-menu">
+                                            <li>
+                                                <a href="#">Proprietário</a>
+                                                <a href="#">Vendedor</a>
+                                            </li>
+                                        </ul>
+                                      </div>    
+                                </label>
+
+                                <label for="">Nivel de acesso
+                                    <div class="btn-group">
+                                        <button class="btn btn-secondary btn-sm dropdown-toggle . shadow-none" type="button" data-bs-toggle="dropdown" aria-expanded="false">
+                                          Selecione
+                                        </button>
+                                        <ul class="dropdown-menu">
+                                            <li>
+                                                <a href="#">Administrador</a> 
+                                                <a href="#">Gerenciador</a>
+                                                <a href="#">Visualizador</a>
+                                            </li>
+                                        </ul>
+                                      </div>
+                                </label> 
+
                         </div> 
                         <div class="c">
                             <div class="btn-group">
