Customização dos selectdropdown, renomeado as divs (em andamento)

--- a/user_registration.html
+++ b/user_registration.html
@@ -154,7 +154,7 @@
                             <label for="">Nome completo</label>
                             <input id="" name="" required="required" type="text" placeholder=""/>
                         </p>
-                        <div class="a">
+                        <div class="user-email">
                             <p>
                                 <label for="">Usuário</label>
                                 <input id="" name="" required="required" type="text" placeholder=""/>
@@ -164,7 +164,7 @@
                                 <input id="" name="" required="required" type="text" placeholder=""/>
                             </p>
                         </div>
-                        <div class="b">   
+                        <div class="office-access">   
                             
                                 <label for="">Cargo
                                     <div class="btn-group">
@@ -196,7 +196,7 @@
                                 </label> 
 
                         </div> 
-                        <div class="c">
+                        <div class="register">
                             <div class="btn-group">
                                 <button class="btn btn-primary" id="btn_cadastrar" type="button">CADASTRAR</button>
                             </div>
